# clion-boilerplate-wx

./: CMakeLists.txt  README.md  main.cpp
